# proj-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  VERSION  new_proj.sh  proj-init.sh  proj-template.sh  pyproject.toml  scaffold.sh
.claude/: CLAUDE.md
.claude/skills/install-renovatabot/: SKILL.md
.claude/skills/install-template/: SKILL.md
.claude/skills/renovatabot-enroll/: SKILL.md
.claude/skills/renovate-enroll/: SKILL.md
.github/workflows/: test.yml
.planners/: README.md
.planners/plans/000-add-type-checker/: plan.md
.planners/plans/002-upgrade-lint-typecheck-pyrefly-v1/: plan.md
.planners/plans/003-add-renovate/: plan.md
.planners/plans/004-migrate-to-planners-layout/: plan.md
.planners/plans/005-template-planners-scaffold/: plan.md
docs/: README.md
docs/guides/: github-automation.md  pre-commit.md  trusted-publishers.md
docs/plans/: 000-add-type-checker.md  001-missing-template-infrastructure.md  002-upgrade-lint-typecheck-pyrefly-v1.md  003-add-renovate.md  004-migrate-to-planners-layout.md
scripts/: proj-init.sh  renovatabot-enroll.sh  renovate-enroll.sh
template/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
template/.claude/: CLAUDE.md  settings.json  settings.local.json
template/.claude/hooks/: lint-typecheck.sh
template/.claude/skills/lint-and-typecheck/: SKILL.md
template/.github/: renovate.json
template/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
template/.github/workflows/: publish.yml  renovate.yml  test.yml
template/.planners/: README.md
template/PACKAGE/: cli.py
template/docs/guides/: lint-and-typecheck.md
template/tests/: test_PACKAGE.py
tests/: test_PACKAGE.py
