[project]
name = "PACKAGE"
version = "0.1.0a0"
description = ""
authors = [
    {name = "gitronald", email = "gitronald@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[project.urls]
repository = "https://github.com/gitronald/PACKAGE"

[project.scripts]
PACKAGE = "PACKAGE.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit",
    "pyrefly",
    "pytest>=9.0.2",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python idioms)
]

[tool.pyrefly]
python-version = "3.11"
project-includes = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
